--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   background-color: hsl(185, 75%, 39%);
-  /* background-image: url(images/bg-pattern-top.svg);
-  background-repeat: no-repeat;
-  background-image: url(images/bg-pattern-bottom.svg); */
+  background-image: url(images/bg-pattern-top.svg),
+    url(images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: right 48vw bottom 40vh, left 53vw top 44vh;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -15,32 +17,51 @@ body {
   font-size: 18px;
   font-family: "Kumbh Sans", sans-serif;
 }
-.grid {
-  background-color: white;
-  border-radius: 18px;
-  max-width: 360px;
-  min-height: 54vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  /* overflow: hidden; */
-}
-.img .img-bac {
-  border-top-left-radius: 18px;
-  border-top-right-radius: 18px;
-  width: 360px;
-}
-.img .img-pro {
-  margin-left: 130px;
-  background-color: white;
-  border-radius: 100%;
-  border: solid white 5px;
-  margin-top: -70px;
-}
-.card-content {
-  display: flex;
+.container {
   text-align: center;
-  flex-direction: column;
-  color: black;
+  margin: 0 auto;
+}
+.wrapper {
+  background-color: white;
+  border-radius: 15px;
+  max-width: 420px;
+  overflow: hidden;
+  margin: 1rem;
+}
+.card-content img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 4px solid white;
+  margin-top: -52px;
+  margin-bottom: 20px;
+}
+.card-content h2 {
+  color: hsl(229, 23%, 23%);
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.card-content h2 span {
+  color: hsl(227, 10%, 46%);
+  font-weight: 400;
+}
+.card-content p {
+  color: hsl(227, 10%, 46%);
+  font-size: 13px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid hsl(227, 10%, 46%, 0.3);
+  padding: 30px 50px;
+  margin-top: 30px;
+}
+.footer p.num {
+  font-size: 18px;
+  color: hsl(229, 23%, 23%);
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 .attribution {
   display: flex;
@@ -52,7 +73,7 @@ body {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: #fff;
   text-decoration: none;
   margin-left: 2px;
 }
